Start of news page

--- a/craft/templates/_layout.html
+++ b/craft/templates/_layout.html
@@ -111,9 +111,12 @@
 				#}
 				{% if craft.request.getSegment(1) == 'news' %}
 
-					<div class="banner" id="news-page-banner">	
-						<div class="banner-headline">Tasting Notes</div>
-						<div class="banner-subheadline">2006-2011</div>
+					<div class="banner" id="news-page-banner">
+
+						<div class="banner-headline-container">
+							<div class="banner-headline">Press Reviews & Ratings</div>
+						</div>
+						
 					</div>
 
 				{% endif %}
