--- a/public/css/sass/main.sass
+++ b/public/css/sass/main.sass
@@ -275,6 +275,10 @@ footer
         top: -2px
   #wine-page-banner
     background-image: image-url('banners/wine-banner.jpg')
+  #news-page-banner
+    background-image: image-url('banners/news-banner.jpg')
+    .banner-headline
+      font-size: 72px
 
 // Hidden video inside banners
 
