--- a/craft/templates/news/index.html
+++ b/craft/templates/news/index.html
@@ -5,8 +5,41 @@
   <article class="page-content">
     <div class="awards-list">
       <li>
-        
+        <figure class="left-image">
+          <img src="/images/wine/gigio-art.jpg" alt="">
+        </figure>
+        <div class="right-content">
+          <h4 class="award-date">2011</h4>
+          <p class="award-description">
+            “Lots of dried-berry, burnt-orange & dark-chocolate aromas. Full body, juicy tannins and a spicy, coffee, walnut and berry aftertaste. Needs time to soften. A blend of 90% sangiovese and 10% merlot. Better in 2016.”
+          </p>
+          <div class="award-score">
+            92
+          </div>
+          <div class="award-giver">
+            <img src="/images/site/award-wine-specator.jpg" alt="">
+          </div>
+        </div>
       </li>
+
+      <li>
+        <figure class="left-image">
+          <img src="/images/wine/gigetto-art.jpg" alt="">
+        </figure>
+        <div class="right-content">
+          <h4 class="award-date">2011</h4>
+          <p class="award-description">
+            “Very attractive aromas of cinnamon cookie, cherry and plum follow through to a full body, firm tannins and a fresh finish. A delicious blend of 90% sangiovese and 10% merlot. Drink or hold.”
+          </p>
+          <div class="award-score">
+            92
+          </div>
+          <div class="award-giver">
+            <img src="/images/site/award-james.jpg" alt="">
+          </div>
+        </div>
+      </li>
+
     </div>
   </article>
 
