Finished press page

--- a/craft/templates/news/index.html
+++ b/craft/templates/news/index.html
@@ -17,7 +17,7 @@
             92
           </div>
           <div class="award-giver">
-            <img src="/images/site/award-wine-specator.jpg" alt="">
+            <img src="/images/site/award-james.jpg" alt="">
           </div>
         </div>
       </li>
@@ -36,6 +36,82 @@
           </div>
           <div class="award-giver">
             <img src="/images/site/award-james.jpg" alt="">
+          </div>
+        </div>
+      </li>
+
+      <!-- Next Row -->
+
+      <li>
+        <figure class="left-image">
+          <img src="/images/wine/gigio-art.jpg" alt="">
+        </figure>
+        <div class="right-content">
+          <h4 class="award-date">2010</h4>
+          <p class="award-description">
+            “Very intense aromas of currants, blackberries and minerals. Full body with fine tannins and a beautiful finish. A blend of 90% sangiovese and 10% merlot. Made from 3.2 acres near Florence. Better after 2014.”
+          </p>
+          <div class="award-score">
+            92
+          </div>
+          <div class="award-giver">
+            <img src="/images/site/award-james.jpg" alt="">
+          </div>
+        </div>
+      </li>
+
+      <li>
+        <figure class="left-image">
+          <img src="/images/wine/gigetto-art.jpg" alt="">
+        </figure>
+        <div class="right-content">
+          <h4 class="award-date">2010</h4>
+          <p class="award-description">
+            “A focused, clean red with light currant and cherry color and hints of new wood. Full body with firm tannins and a juicy finish. I think a year or two more of bottle age will bring this together wonderfully. 90% sangiovese and 10% merlot.”
+          </p>
+          <div class="award-score">
+            91
+          </div>
+          <div class="award-giver">
+            <img src="/images/site/award-james.jpg" alt="">
+          </div>
+        </div>
+      </li>
+
+      <!-- Next Row -->
+
+      <li>
+        <figure class="left-image">
+          <img src="/images/wine/gigio-art.jpg" alt="">
+        </figure>
+        <div class="right-content">
+          <h4 class="award-date">2007</h4>
+          <p class="award-description">
+            “A big, full, powerful red, with dried berries, toasty oak and coffee aromas and flavors. Very rich and long. Verging on a blockbuster style. 95 percent Sangiovese and 5 percent Merlot. The second vintage of this new winery from Fiesole. Best after 2013. 100 cases made.”
+          </p>
+          <div class="award-score">
+            93
+          </div>
+          <div class="award-giver">
+            <img src="/images/site/award-wine-specator.jpg" alt="">
+          </div>
+        </div>
+      </li>
+
+      <li>
+        <figure class="left-image">
+          <img src="/images/wine/gigio-art.jpg" alt="">
+        </figure>
+        <div class="right-content">
+          <h4 class="award-date">2006</h4>
+          <p class="award-description">
+            “A dense, powerful and subtle red, with ripe plum, berries and toasty oak. Full and chewy. Needs time to come together. A new wine from Fiesole. Best after 2011.”
+          </p>
+          <div class="award-score">
+            92
+          </div>
+          <div class="award-giver">
+            <img src="/images/site/award-wine-specator.jpg" alt="">
           </div>
         </div>
       </li>
