--- a/public/css/sass/main.sass
+++ b/public/css/sass/main.sass
@@ -456,6 +456,7 @@ footer
       width: 49%
       display: inline-block
       vertical-align: top
+      margin-bottom: 70px
       &:after
         content: ""
         clear: both
