Home video button

--- a/public/css/sass/main.sass
+++ b/public/css/sass/main.sass
@@ -153,6 +153,9 @@ footer
   height: 100%
   position: relative
   z-index: 0
+  #home &
+    .banner .banner-cta
+      bottom: 165px
   .banner-arrows
     position: absolute
     z-index: 10
