--- a/public/css/main.css
+++ b/public/css/main.css
@@ -369,7 +369,11 @@ footer ul li:last-child {
   position: relative;
   z-index: 0;
 }
-/* line 156, sass/main.sass */
+/* line 157, sass/main.sass */
+#home .banners .banner .banner-cta {
+  bottom: 165px;
+}
+/* line 159, sass/main.sass */
 .banners .banner-arrows {
   position: absolute;
   z-index: 10;
@@ -377,7 +381,7 @@ footer ul li:last-child {
   margin-top: -30px;
   width: 100%;
 }
-/* line 162, sass/main.sass */
+/* line 165, sass/main.sass */
 .banners .banner-arrows li {
   width: 32px;
   height: 60px;
@@ -398,34 +402,34 @@ footer ul li:last-child {
   transition-duration: 0.2s;
 }
 @media print, (-webkit-min-device-pixel-ratio: 1.25), (-o-min-device-pixel-ratio: 5 / 4), (min-resolution: 120dpi) {
-  /* line 162, sass/main.sass */
+  /* line 165, sass/main.sass */
   .banners .banner-arrows li {
     background-image: url("../images/site/arrows@2x.png");
     background-size: 64px 60px;
   }
 }
-/* line 174, sass/main.sass */
+/* line 177, sass/main.sass */
 .banners .banner-arrows li:hover {
   opacity: 0.6;
 }
-/* line 176, sass/main.sass */
+/* line 179, sass/main.sass */
 .banners .banner-arrows li.previous {
   background-position: top left;
   left: 20px;
 }
-/* line 179, sass/main.sass */
+/* line 182, sass/main.sass */
 .banners .banner-arrows li.next {
   background-position: top right;
   right: 20px;
 }
-/* line 183, sass/main.sass */
+/* line 186, sass/main.sass */
 .banners .banner-dots {
   position: absolute;
   z-index: 10;
   top: 657px;
   left: 50%;
 }
-/* line 188, sass/main.sass */
+/* line 191, sass/main.sass */
 .banners .banner-dots li {
   width: 22px;
   height: 22px;
@@ -436,18 +440,18 @@ footer ul li:last-child {
   margin-right: 8px;
   display: inline-block;
 }
-/* line 197, sass/main.sass */
+/* line 200, sass/main.sass */
 .banners .banner-dots li:last-child {
   margin-right: 0;
 }
-/* line 199, sass/main.sass */
+/* line 202, sass/main.sass */
 .banners .banner-dots li.active {
   border: 3px solid white;
   width: 16px;
   height: 16px;
   background-color: transparent;
 }
-/* line 205, sass/main.sass */
+/* line 208, sass/main.sass */
 .banners.banner_slideshow .banner {
   position: absolute;
   left: 0;
@@ -456,7 +460,7 @@ footer ul li:last-child {
   bottom: 0;
   opacity: 0;
 }
-/* line 212, sass/main.sass */
+/* line 215, sass/main.sass */
 .banners.banner_slideshow .banner.active {
   opacity: 1;
   z-index: 5;
@@ -469,11 +473,11 @@ footer ul li:last-child {
   -o-transition-duration: 1s;
   transition-duration: 1s;
 }
-/* line 217, sass/main.sass */
+/* line 220, sass/main.sass */
 .banners.banner_slideshow .banner.previously_active {
   opacity: 1;
 }
-/* line 219, sass/main.sass */
+/* line 222, sass/main.sass */
 .banners .banner {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
@@ -486,11 +490,11 @@ footer ul li:last-child {
   text-align: center;
   color: white;
 }
-/* line 229, sass/main.sass */
+/* line 232, sass/main.sass */
 .banners .banner.with_cta .banner-headline-container {
   height: 70%;
 }
-/* line 231, sass/main.sass */
+/* line 234, sass/main.sass */
 .banners .banner .banner-headline-container {
   max-width: 1000px;
   margin: 0 auto;
@@ -498,7 +502,7 @@ footer ul li:last-child {
   display: table;
   height: 93%;
 }
-/* line 237, sass/main.sass */
+/* line 240, sass/main.sass */
 .banners .banner .banner-headline {
   font-family: "Nickyshand", Tahoma, Geneva, sans-serif;
   font-size: 42px;
@@ -507,7 +511,7 @@ footer ul li:last-child {
   vertical-align: middle;
   text-align: center;
 }
-/* line 244, sass/main.sass */
+/* line 247, sass/main.sass */
 .banners .banner .banner-cta {
   font-size: 24px;
   font-style: italic;
@@ -518,7 +522,7 @@ footer ul li:last-child {
   right: 0;
   bottom: 65px;
 }
-/* line 253, sass/main.sass */
+/* line 256, sass/main.sass */
 .banners .banner .banner-cta .banner-cta-interior {
   display: inline-block;
   cursor: pointer;
@@ -526,13 +530,13 @@ footer ul li:last-child {
   padding: 20px 60px;
   line-height: 42px;
 }
-/* line 260, sass/main.sass */
+/* line 263, sass/main.sass */
 .banners .banner .banner-video p {
   position: relative;
   padding-left: 50px;
   top: 1px;
 }
-/* line 264, sass/main.sass */
+/* line 267, sass/main.sass */
 .banners .banner .banner-video p:before {
   content: "";
   width: 42px;
@@ -547,85 +551,85 @@ footer ul li:last-child {
   top: -2px;
 }
 @media print, (-webkit-min-device-pixel-ratio: 1.25), (-o-min-device-pixel-ratio: 5 / 4), (min-resolution: 120dpi) {
-  /* line 264, sass/main.sass */
+  /* line 267, sass/main.sass */
   .banners .banner .banner-video p:before {
     background-image: url("../images/site/play@2x.png");
     background-size: 42px 42px;
   }
 }
-/* line 276, sass/main.sass */
+/* line 279, sass/main.sass */
 .banners #wine-page-banner {
   background-image: url('/images/banners/wine-banner.jpg?1421107543');
 }
-/* line 278, sass/main.sass */
+/* line 281, sass/main.sass */
 .banners #news-page-banner {
   background-image: url('/images/banners/news-banner.jpg?1421264430');
 }
-/* line 280, sass/main.sass */
+/* line 283, sass/main.sass */
 .banners #news-page-banner .banner-headline {
   font-size: 72px;
 }
 
-/* line 285, sass/main.sass */
+/* line 288, sass/main.sass */
 .hidden-video {
   height: 450px;
   overflow: hidden;
   display: none;
 }
 
-/* line 292, sass/main.sass */
+/* line 295, sass/main.sass */
 .container {
   width: 1005px;
   margin: 0 auto;
   position: relative;
 }
-/* line 296, sass/main.sass */
+/* line 299, sass/main.sass */
 #home main#content .container {
   margin-top: 0;
   margin-bottom: 0;
 }
-/* line 299, sass/main.sass */
+/* line 302, sass/main.sass */
 main#content .container {
   margin-top: 80px;
   margin-bottom: 40px;
 }
-/* line 302, sass/main.sass */
+/* line 305, sass/main.sass */
 .container h1 {
   font-family: "Nickyshand", Tahoma, Geneva, sans-serif;
   font-size: 72px;
 }
-/* line 305, sass/main.sass */
+/* line 308, sass/main.sass */
 .container #wine h1 {
   font-size: 94px;
 }
-/* line 307, sass/main.sass */
+/* line 310, sass/main.sass */
 .container p {
   font-size: 18px;
   line-height: 28px;
   margin-bottom: 10px;
 }
-/* line 311, sass/main.sass */
+/* line 314, sass/main.sass */
 .container strong {
   font-weight: bold;
 }
-/* line 313, sass/main.sass */
+/* line 316, sass/main.sass */
 .container em {
   font-style: italic;
 }
-/* line 315, sass/main.sass */
+/* line 318, sass/main.sass */
 .container ul {
   padding-left: 25px;
   font-size: 18px;
   line-height: 28px;
   padding-right: 100px;
 }
-/* line 320, sass/main.sass */
+/* line 323, sass/main.sass */
 .container ul li {
   list-style: disc;
   margin-bottom: 10px;
 }
 
-/* line 325, sass/main.sass */
+/* line 328, sass/main.sass */
 .page-content:after {
   content: "";
   clear: both;
@@ -633,26 +637,26 @@ main#content .container {
   height: 1px;
   display: block;
 }
-/* line 331, sass/main.sass */
+/* line 334, sass/main.sass */
 .page-content .page-image {
   float: right;
   padding-left: 75px;
   width: 334px;
 }
-/* line 335, sass/main.sass */
+/* line 338, sass/main.sass */
 .page-content .page-image img {
   width: 334px;
 }
-/* line 337, sass/main.sass */
+/* line 340, sass/main.sass */
 .page-content .page-text {
   float: left;
   width: 596px;
 }
-/* line 340, sass/main.sass */
+/* line 343, sass/main.sass */
 .page-content .page-text h1 {
   margin-bottom: 35px;
 }
-/* line 342, sass/main.sass */
+/* line 345, sass/main.sass */
 .page-content .page-text h2 {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
@@ -668,7 +672,7 @@ main#content .container {
   font-size: 30px;
   line-height: 68px;
 }
-/* line 354, sass/main.sass */
+/* line 357, sass/main.sass */
 .page-content .page-text h2:after {
   content: "";
   width: 25px;
@@ -683,48 +687,48 @@ main#content .container {
   background-position: 0 0;
 }
 @media print, (-webkit-min-device-pixel-ratio: 1.25), (-o-min-device-pixel-ratio: 5 / 4), (min-resolution: 120dpi) {
-  /* line 354, sass/main.sass */
+  /* line 357, sass/main.sass */
   .page-content .page-text h2:after {
     background-image: url("../images/site/accordion@2x.png");
     background-size: 25px 98px;
   }
 }
-/* line 366, sass/main.sass */
+/* line 369, sass/main.sass */
 .page-content .page-text h2.active:after {
   top: 20px;
   background-position: 0 bottom;
 }
-/* line 369, sass/main.sass */
+/* line 372, sass/main.sass */
 .page-content .page-text .page-text-block {
   display: none;
   margin: 35px 0;
 }
-/* line 372, sass/main.sass */
+/* line 375, sass/main.sass */
 .page-content .page-text .page-text-block.active {
   display: block;
 }
 
-/* line 375, sass/main.sass */
+/* line 378, sass/main.sass */
 .wine-page-content {
   display: none;
 }
-/* line 377, sass/main.sass */
+/* line 380, sass/main.sass */
 .wine-page-content.active {
   display: block;
 }
-/* line 380, sass/main.sass */
+/* line 383, sass/main.sass */
 .wine-page-content .wine-page-text .wine-specifications {
   padding: 0;
 }
-/* line 382, sass/main.sass */
+/* line 385, sass/main.sass */
 .wine-page-content .wine-page-text .wine-specifications li {
   list-style: none;
 }
-/* line 384, sass/main.sass */
+/* line 387, sass/main.sass */
 .wine-page-content .wine-page-image {
   position: relative;
 }
-/* line 386, sass/main.sass */
+/* line 389, sass/main.sass */
 .wine-page-content .wine-page-image:before {
   content: "";
   display: block;
@@ -739,7 +743,7 @@ main#content .container {
   top: 110px;
   z-index: 0;
 }
-/* line 399, sass/main.sass */
+/* line 402, sass/main.sass */
 .wine-page-content .wine-page-image img {
   float: right;
   margin-right: 5px;
@@ -748,14 +752,14 @@ main#content .container {
   z-index: 1;
 }
 
-/* line 406, sass/main.sass */
+/* line 409, sass/main.sass */
 .wine-browser {
   width: 1000px;
   margin: 0 auto;
   text-align: justify;
   padding-top: 55px;
 }
-/* line 412, sass/main.sass */
+/* line 415, sass/main.sass */
 .wine-browser li {
   display: inline-block;
   width: 160px;
@@ -767,7 +771,7 @@ main#content .container {
   padding-bottom: 15px;
   vertical-align: top;
 }
-/* line 423, sass/main.sass */
+/* line 426, sass/main.sass */
 .wine-browser li:hover:after {
   content: "";
   width: 66px;
@@ -779,38 +783,38 @@ main#content .container {
   left: 50%;
   margin-left: -33px;
 }
-/* line 433, sass/main.sass */
+/* line 436, sass/main.sass */
 .wine-browser li img {
   width: 140px;
   padding: 10px;
 }
-/* line 436, sass/main.sass */
+/* line 439, sass/main.sass */
 .wine-browser li:last-child {
   margin-right: 0;
 }
-/* line 438, sass/main.sass */
+/* line 441, sass/main.sass */
 .wine-browser li.active img {
   padding: 0;
   border: 10px solid #ed8f17;
 }
 @media screen and (min-width: 1180px) {
-  /* line 406, sass/main.sass */
+  /* line 409, sass/main.sass */
   .wine-browser {
     width: 1180px;
     padding-top: 20px;
   }
-  /* line 444, sass/main.sass */
+  /* line 447, sass/main.sass */
   .wine-browser li {
     width: 190px;
     margin-right: 57px;
   }
-  /* line 447, sass/main.sass */
+  /* line 450, sass/main.sass */
   .wine-browser li img {
     width: 170px;
   }
 }
 
-/* line 454, sass/main.sass */
+/* line 457, sass/main.sass */
 #news .awards-list li {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
@@ -820,36 +824,36 @@ main#content .container {
   vertical-align: top;
   margin-bottom: 70px;
 }
-/* line 460, sass/main.sass */
+/* line 463, sass/main.sass */
 #news .awards-list li:after {
   content: "";
   clear: both;
 }
-/* line 463, sass/main.sass */
+/* line 466, sass/main.sass */
 #news .awards-list li .left-image {
   float: left;
   margin-right: 20px;
 }
-/* line 466, sass/main.sass */
+/* line 469, sass/main.sass */
 #news .awards-list li .left-image img {
   width: 137px;
   border: 2px solid #889b9f;
 }
-/* line 469, sass/main.sass */
+/* line 472, sass/main.sass */
 #news .awards-list li .right-content {
   float: left;
   width: 296px;
 }
-/* line 472, sass/main.sass */
+/* line 475, sass/main.sass */
 #news .awards-list li .award-date {
   font-family: "Nickyshand", Tahoma, Geneva, sans-serif;
   font-size: 44px;
 }
-/* line 475, sass/main.sass */
+/* line 478, sass/main.sass */
 #news .awards-list li .award-description {
   padding-bottom: 20px;
 }
-/* line 477, sass/main.sass */
+/* line 480, sass/main.sass */
 #news .awards-list li .award-score {
   background: #ed8f17;
   width: 60px;
@@ -864,17 +868,17 @@ main#content .container {
   vertical-align: middle;
   margin-right: 10px;
 }
-/* line 490, sass/main.sass */
+/* line 493, sass/main.sass */
 #news .awards-list li .award-giver {
   display: inline-block;
   vertical-align: middle;
 }
 
-/* line 498, sass/main.sass */
+/* line 501, sass/main.sass */
 #contact .success {
   display: none;
 }
-/* line 500, sass/main.sass */
+/* line 503, sass/main.sass */
 #contact .errors {
   display: none;
   font-style: italic;
@@ -883,44 +887,44 @@ main#content .container {
   border-bottom: 1px solid #b24629;
   margin: 20px 0;
 }
-/* line 507, sass/main.sass */
+/* line 510, sass/main.sass */
 #contact .errors ul li {
   font-size: 14px;
   margin-bottom: 5px;
 }
-/* line 510, sass/main.sass */
+/* line 513, sass/main.sass */
 #contact .errors ul li:last-child {
   margin-bottom: 0;
 }
-/* line 512, sass/main.sass */
+/* line 515, sass/main.sass */
 #contact form {
   margin-top: 20px;
 }
-/* line 514, sass/main.sass */
+/* line 517, sass/main.sass */
 #contact form .form-left {
   float: left;
   width: 240px;
 }
-/* line 517, sass/main.sass */
+/* line 520, sass/main.sass */
 #contact form .form-right {
   float: left;
 }
-/* line 519, sass/main.sass */
+/* line 522, sass/main.sass */
 #contact form #location {
   display: none;
 }
-/* line 521, sass/main.sass */
+/* line 524, sass/main.sass */
 #contact label, #contact input, #contact button, #contact select, #contact textarea {
   font-size: 14px;
   font-weight: normal;
   line-height: 20px;
 }
-/* line 525, sass/main.sass */
+/* line 528, sass/main.sass */
 #contact .required {
   color: red;
   padding-left: 5px;
 }
-/* line 529, sass/main.sass */
+/* line 532, sass/main.sass */
 #contact input[type="submit"] {
   -webkit-appearance: button;
   display: block;
@@ -938,12 +942,12 @@ main#content .container {
   margin-top: 10px;
   width: 220px;
 }
-/* line 546, sass/main.sass */
+/* line 549, sass/main.sass */
 #contact label {
   display: block;
   margin-bottom: 5px;
 }
-/* line 550, sass/main.sass */
+/* line 553, sass/main.sass */
 #contact select, #contact textarea {
   display: inline-block;
   height: 20px;
@@ -954,7 +958,7 @@ main#content .container {
   color: #555555;
   vertical-align: middle;
 }
-/* line 562, sass/main.sass */
+/* line 565, sass/main.sass */
 #contact input[type="text"], #contact input[type="password"], #contact input[type="datetime"], #contact input[type="datetime-local"], #contact input[type="date"], #contact input[type="month"], #contact input[type="time"], #contact input[type="week"], #contact input[type="number"], #contact input[type="email"], #contact input[type="url"], #contact input[type="search"], #contact input[type="tel"], #contact input[type="color"] {
   display: inline-block;
   height: 20px;
@@ -965,11 +969,11 @@ main#content .container {
   color: #555555;
   vertical-align: middle;
 }
-/* line 572, sass/main.sass */
+/* line 575, sass/main.sass */
 #contact input {
   width: 206px;
 }
-/* line 575, sass/main.sass */
+/* line 578, sass/main.sass */
 #contact textarea {
   width: 340px;
   height: 140px;
@@ -983,7 +987,7 @@ main#content .container {
   -o-transition: border linear 0.2s, box-shadow linear 0.2s;
   transition: border linear 0.2s, box-shadow linear 0.2s;
 }
-/* line 589, sass/main.sass */
+/* line 592, sass/main.sass */
 #contact input[type="text"], #contact input[type="password"], #contact input[type="datetime"], #contact input[type="datetime-local"], #contact input[type="date"], #contact input[type="month"], #contact input[type="time"], #contact input[type="week"], #contact input[type="number"], #contact input[type="email"], #contact input[type="url"], #contact input[type="search"], #contact input[type="tel"], #contact input[type="color"] {
   background-color: white;
   border: 1px solid #cccccc;
@@ -995,7 +999,7 @@ main#content .container {
   -o-transition: border linear 0.2s, box-shadow linear 0.2s;
   transition: border linear 0.2s, box-shadow linear 0.2s;
 }
-/* line 600, sass/main.sass */
+/* line 603, sass/main.sass */
 #contact textarea:focus {
   border-color: rgba(82, 168, 236, 0.8);
   outline: 0;
@@ -1003,7 +1007,7 @@ main#content .container {
   -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(82, 168, 236, 0.6);
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(82, 168, 236, 0.6);
 }
-/* line 608, sass/main.sass */
+/* line 611, sass/main.sass */
 #contact input[type="text"]:focus, #contact input[type="password"]:focus, #contact input[type="datetime"]:focus, #contact input[type="datetime-local"]:focus, #contact input[type="date"]:focus, #contact input[type="month"]:focus, #contact input[type="time"]:focus, #contact input[type="week"]:focus, #contact input[type="number"]:focus, #contact input[type="email"]:focus, #contact input[type="url"]:focus, #contact input[type="search"]:focus, #contact input[type="tel"]:focus, #contact input[type="color"]:focus {
   border-color: rgba(82, 168, 236, 0.8);
   outline: 0;
@@ -1011,7 +1015,7 @@ main#content .container {
   -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(82, 168, 236, 0.6);
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(82, 168, 236, 0.6);
 }
-/* line 615, sass/main.sass */
+/* line 618, sass/main.sass */
 #contact .uneditable-input:focus {
   border-color: rgba(82, 168, 236, 0.8);
   outline: 0;
@@ -1019,7 +1023,7 @@ main#content .container {
   -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(82, 168, 236, 0.6);
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(82, 168, 236, 0.6);
 }
-/* line 623, sass/main.sass */
+/* line 626, sass/main.sass */
 #contact input[type="radio"], #contact input[type="checkbox"] {
   margin: 4px 0 0;
   margin-top: 1px \9;
