--- a/craft/templates/contact.html
+++ b/craft/templates/contact.html
@@ -50,6 +50,9 @@
           <input id="location" name="location" type="text">
 
         </form>
+
+        <p class="prefer_email">Prefer email? You can reach us at <a href="mailto:{{ contactinformation.primaryEmail }}">{{ contactinformation.primaryEmail }}</a></p>
+
       </div>
     </div>
   </article>
