--- a/public/css/sass/main.sass
+++ b/public/css/sass/main.sass
@@ -140,6 +140,11 @@ footer
   padding-top: 40px
   margin-bottom: 50px
   font-size: 14px
+  a
+    color: $black
+    text-decoration: none
+    &:hover
+      text-decoration: underline
   ul
     margin-bottom: 10px
     li
@@ -498,6 +503,14 @@ footer
 // Contact Page
 
 #contact
+  .prefer_email
+    clear: both
+    padding-top: 30px
+    a
+      color: $copper
+      text-decoration: none
+      &:hover
+        text-decoration: underline
   .success
     display: none
   .errors
