--- a/craft/templates/_layout.html
+++ b/craft/templates/_layout.html
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" href="/css/main.css" type="text/css">
 	<script src="/javascript/plugins.js"></script>
 	<script src="/javascript/main.js"></script>
+	<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
 
 </head>
 
